<resources>
    <string name="app_name">Eco Bogota</string>

    <string name="login_email">Correo electrónico</string>
    <string name="login_password">Contraseña</string>
    <string name="login_login_button">Iniciar sesión</string>
    <string name="login_forgot_button">Olvidé mi contraseña</string>
    <string name="login_signup_button">Regístrate</string>

    <string name="registro_nombre">Nombre completo</string>
    <string name="registro_email">Correo electrónico</string>
    <string name="registro_password">Contraseña</string>
    <string name="registro_conf_password">Confirma tu contraseña</string>
    <string name="registro_button">Crear cuenta</string>

    <string name="inicio">Inicio</string>
    <string name="novedades">Novedades</string>
    <string name="reutiliza">Reutiliza</string>
    <string name="perfil">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tituloturno1">Turno 1</string>
    <string name="localidadesturno1">Localidades: \nAntonio Nariño \nBarrios Unidos \nChapinero \nLos Mártires \nPuente Aranda \nRafael Uribe Uribe \nSanta Fe \nTeusaquillo \nTunjuelito \nUsaquén\n</string>
    <string name="tituloturno2">Turno 2</string>
    <string name="localidadesturno2">Localidades: \nEngativá \nFontibón  \nLa Sabana\n</string>
    <string name="tituloturno3">Turno 3</string>
    <string name="localidadesturno3">Localidades: \nBarrios Unidos \nSuba  \nUsaquén\n</string>
    <string name="tituloturno4">Turno 4</string>
    <string name="localidadesturno4">Localidades: \nBosa \nCiudad Bolívar \nKennedy \nPuente Aranda \nTunjuelito\n</string>
    <string name="tituloturno5">Turno 5</string>
    <string name="localidadesturno5">Localidades: \nCiudad Bolívar \nRafael Uribe Uribe \nSan Cristóbal \nSanta Fe \nTunjuelito\n</string>
    <string name="tituloturno6">Turno 6</string>
    <string name="localidadesturno6">Localidades: \nSuba \nMunicipio de Soacha\n</string>
    <string name="tituloturno7">Turno 7</string>
    <string name="localidadesturno7">Localidades: \nFontibón \nKennedy \nFunza \nMadrid, \nMosquera\n</string>
    <string name="tituloturno8">Turno 8</string>
    <string name="localidadesturno8">Localidades: \nAntonio Nariño \nBosa \nChapinero \nKennedy \nLos Mártires \nRafel Uribe Uribe \nSan Cristóbal \nSanta Fe \nUsaquén \nLa Calera \nArboretto\n</string>
    <string name="tituloturno9">Turno 9</string>
    <string name="localidadesturno9">Localidades: \nUsaquén \nSuba \nChía \nCajicá \nCojardín \nSopó \nTocancipá \nGachancipá \nAcuapolis\n</string>

    <string name="boton1">Vela Navideña</string>
    <string name="boton2">Jarrones Decorativos</string>
    <string name="boton3">Portalápices</string>
    <string name="boton4">Caja Organizadora</string>
    <string name="boton5">Soporte para Macetas</string>
    <string name="boton6">Portaretrato</string>
    <string name="boton7">Mantel Individual</string>
    <string name="boton8">Alimentador para Mascotas</string>


    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="actualizar_perfil">Actualizar Perfil</string>
    <string name="recuperar_contraseña">Enviar mail</string>


</resources>